# vantix

./: README.md  SETUP_GUIDE.md  pyproject.toml
mlnew/: main.py
mlnew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
